fixed spacing in the pauses and episodes in regards to their times and hyphens

--- a/html/style/dist-css/main.css
+++ b/html/style/dist-css/main.css
@@ -828,10 +828,31 @@ main#projects-page > section > .project > .main > li.episode, main#projects-page
   gap: var(--gap-0) var(--gap-l);
 }
 main#projects-page > section > .project > .main > li.episode > p:first-child, main#projects-page > section > .project > .main > li.pause > p:first-child {
-  width: 5ch;
+  width: 6ch;
   text-align: center;
 }
 main#projects-page > section > .project > .main > li.episode > p:last-child, main#projects-page > section > .project > .main > li.pause > p:last-child {
+  --margin-0: 0;
+  --margin-none: 0;
+  --margin-2xs: 0.1rem;
+  --margin-xs: 0.15rem;
+  --margin-s: 0.25rem;
+  --margin-m: 0.5rem;
+  --margin-l: 0.75rem;
+  --margin-xl: 1rem;
+  --margin-2xl: 1.5rem;
+  --margin-3xl: 2rem;
+  --margin-4xl: 5dvh;
+  --margin-5xl: 10dvh;
+  --margin-6xl: 15dvh;
+  --margin-7xl: 20dvh;
+  --margin-8xl: 25dvh;
+  --margin-default: var(--margin-m);
+  margin-top: var(--margin-0);
+  margin-right: var(--margin-0);
+  margin-bottom: var(--margin-0);
+  margin-left: var(--margin-s);
+  margin: var(--margin-0) var(--margin-0) var(--margin-0) var(--margin-s);
   width: 100%;
 }
 main#projects-page > section > .project > .main > li.pause {
